# protodefc

./: .gitignore  .gitmodules  Cargo.toml  README.md  build.rs  test.js  test.pds  test.py
backend_resources/javascript/: builtins.js  templates.toml
src/: errors.rs  field_reference.rs  lib.rs  protodefc.rs  rc_container.rs  test_harness.rs  variants.rs
src/backend/: mod.rs
src/backend/common/: formatter.rs
src/backend/imperative_base/: '  container_utils.rs  deserialize.rs  mod.rs  reference.rs  serialize.rs  size_of.rs  utils.rs
src/backend/imperative_base/tests/: mod.rs  (+1 more)
src/backend/javascript/: builder.rs  cu_to_js.rs  deserialize.rs  ib_to_js.rs  mod.rs  serialize.rs  size_of.rs  test_harness.rs
src/backend/json_spec/: mod.rs
src/backend/python/: builder.rs  cu_to_py.rs  ib_to_py.rs  mod.rs
src/backend/rust/: builder.rs  cu_to_rs.rs  ib_to_rs.rs  mod.rs
src/context/: compilation_unit.rs  mod.rs
src/frontend/: mod.rs
src/frontend/protocol_json/: count.rs  mod.rs  variants.rs
src/frontend/protocol_spec/: from_ir.rs  mod.rs  to_ir.rs
src/ir/: debug_printer.rs  field_property_reference.rs  id_generator.rs  mod.rs  name.rs  target_type.rs
src/ir/compilation_unit/: defined_spec.rs  defined_type_spec.rs  mod.rs  path.rs
src/ir/spec/: data.rs  debug_printer.rs  mod.rs
src/ir/typ/: debug_printer.rs  mod.rs
src/ir/type_spec/: literal.rs  mod.rs  property.rs
src/ir/variant/: array.rs  container.rs  error.rs  mod.rs  simple_scalar.rs  sized_buffer.rs  terminated_buffer.rs  union.rs
src/old_protocol_json_to_pds/: mod.rs  namespace.rs  typ.rs
src/pass/: assign_ident.rs  assign_namespace.rs  assign_parent.rs  assign_type_spec.rs  generate_field_access_order.rs  generate_type_spec.rs  mod.rs  propagate_types.rs  resolve_context.rs  resolve_reference.rs  validate_types.rs
src/variants/: array.rs  container.rs  mod.rs
test_data/spec/: scalar_as_root.pds
tests/: spec_compile.rs
tests/javascript_backend/: size_of.rs
(+35 files in other folders)
