[package]
name = "protodefc"
version = "0.1.0"
authors = ["HansiHE <hansihe@hansihe.com>"]

[features]
default = ["js_tests"]

js_tests = []

[dependencies]
json = "0.11.5"
error-chain = "0.10.0"
nom = { version = "2.1.0", features = ["verbose-errors"] }
rustache = "0.1.0"
itertools = "0.5.9"
clap = "2.22.2"
matches = "0.1.4"
regex = "0.2.1"
Inflector = "0.10.0"

[lib]
name = "protodefc"
path = "src/lib.rs"

[[bin]]
name = "protodefc"
path = "src/protodefc.rs"
