[package]
name = "protodefc"
version = "0.1.0"
authors = ["HansiHE <hansihe@hansihe.com>"]
build = "build.rs"

[features]
default = ["js_tests"]

js_tests = []

[dependencies]
lazy_static = "0.2.8"
json = "0.11.5"
error-chain = "0.10.0"
nom = { version = "2.1.0", features = ["verbose-errors"] }
rustache = "0.1.0"
itertools = "0.5.9"
clap = "2.22.2"
matches = "0.1.4"
regex = "0.2.1"
Inflector = "0.10.0"
num-bigint = "0.1.37"
unicode-segmentation = "1.1.0"

[build-dependencies]
peg = "0.5"

[lib]
name = "protodefc"
path = "src/lib.rs"

[[bin]]
name = "protodefc"
path = "src/protodefc.rs"
