[package]
name = "protodefc"
version = "0.1.0"
authors = ["HansiHE <hansihe@hansihe.com>"]
build = "build.rs"

[features]
cli = ["clap"]

[dependencies]
lazy_static = "0.2.8"
json = "0.11.5"
itertools = "0.5.9"
matches = "0.1.4"
serde_json = "1.0"
toml = "0.4"
num-bigint = "0.2.0"
error-chain = { version = "0.10.0", default-features = false }
Inflector = { version = "0.10.0", default-features = false }
clap = { version = "2.22.2", optional = true }
nom = { version = "2.1.0", features = ["verbose-errors"] }

[build-dependencies]
peg = "0.5"

[lib]
name = "protodefc"
path = "src/lib.rs"

[[bin]]
name = "protodefc"
path = "src/protodefc.rs"
# https://github.com/rust-lang/cargo/issues/1982#issuecomment-319661478
# cargo run --features=cli
required-features = ["cli"]
